# Stuffr

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  ruff.toml
migrations/: env.py
migrations/versions/: 2025_02_09_1522-a73210a6ca22_initial.py  2025_02_26_2246-c58f0d0f4efa_add_announcement_discount.py  2025_02_26_2320-f9c9d11fbffa_add_user_favorite.py  2025_03_01_2333-b106dbb8514e_announcement_media.py
src/: config.py  dependencies.py  exceptions.py  logging.py  main.py
src/database/: database.py
src/database/models/: announcement_image_model.py  announcement_media_model.py  announcement_model.py  base_model.py  category_model.py  review_model.py  role_model.py  user_favorite_model.py  user_model.py
src/middlewares/: logging_middleware.py
src/repositories/: announcement_repository.py  base_repository.py  user_repository.py
src/routers/: announcement_router.py  user_router.py
src/schemas/: announcement_image_schemas.py  announcement_schemas.py  base_schemas.py  category_schemas.py  common.py  review_schemas.py  role_schemas.py  user_schemas.py
src/services/: announcement_service.py  base_service.py  user_service.py
src/task_queue/: msg_forms.py  worker.py
src/utils/: cache.py  decorators.py  password_manager.py  s3.py  token_manager.py
